# FastAPI_service

./: .flake8  Makefile  README.md  alembic.ini  docker-compose-local.yaml  main.py  pyproject.toml  requirements.txt  settings.py
api/: handlers.py  models.py
db/: db.py  models.py  services.py  session.py
migratios/: env.py
migratios/versions/: 7dc0ff1e4b37_create_user_table.py
tests/: conftest.py  test_handlers.py
