[tool.poetry]
name = "study-service"
version = "0.1.0"
description = ""
authors = ["sirtimrod <rodyamilk@gmail.com>"]
readme = "README.md"
packages = [{include = "study_service"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.9.2"
asyncpg = "^0.27.0"
envparse = "^0.2.0"
fastapi = "^0.89.1"
sqlalchemy = "^1.4.46"
uvicorn = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.10.4"}
psycopg2-binary = "^2.9.5"
asyncio = "^3.4.3"
trio = "^0.22.0"
anyio = "^3.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
httpx = "^0.23.3"
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py
)
'''